fixed spacing on mobile view

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -576,8 +576,8 @@ a.arrow:before {
 /* layout adjustments for mobile and small screens */
 @media screen and (max-width: 640px) {
     .layout-container {    
-        grid-template-columns: 1em 1fr 1em;
-        grid-template-rows: 1em 1fr 2em;
+        grid-template-columns: 1rem 1fr 1rem;
+        grid-template-rows: 1rem 1fr 4rem;
         grid-template-areas: 
             ". . menu"
             ". content ."
